@@ -2,7 +2,7 @@ name = Gebruikers
 description = Allerlei toepassingen die je helpen om je gebruikers op een intuïtieve manier in kaart te brengen.
 core = 7.x
 package = argus - a Quality control extension
-version = 7.x-6.0
+version = 7.x-6.1
 project = argus_gebruikers
 features[ctools][] = field_group:field_group:1
 features[ctools][] = views:views_default:3.0
